--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rochambeau</title>
+    <style>
+        html {
+            font-family: sans-serif;
+        }
+        button {
+            margin: 10px;
+        }
+    </style>
 </head>
 
 <body>
